@@ -1,8 +1,9 @@
-$Id: ChangeLog,v 1.63 2008/11/15 11:38:23 tat Exp $
+$Id: ChangeLog,v 1.64 2008/12/30 13:03:00 tat Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
 LibU 1.x.y
+	- [config] u_config_get_subkey_value_b bug fix
 	- [list] u_list_clear added
 	- [misc] u_strlcpy and u_strlcat added
 	- added shared lib support for MinGW, Cygwin, Solaris and Dragonfly BSD
